# litellm-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SPEC.md  build.rs  codecov.yml
.claude/skills/routing-architecture/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-coverage.yml  ci-cross-platform.yml  ci-disabled-modules.yml  ci-main-full.yml  ci-no-codecov.yml  ci.yml  docker.yml  release.yml
benches/: e2e_benchmarks.rs  performance_benchmarks.rs
config/: gateway.yaml.example  model_prices_extended.json
deployment/docker/: Dockerfile  Dockerfile.arm
docs/analysis/: configuration_analysis.md  streaming_async_analysis.md  testing_analysis.md  vibe-coding-postmortem.md
docs/audit/: 2025-03-07-full-audit.md  AUDIT_2026_03_16_TRACKER.md  ISSUES_SUMMARY.md  rust-patterns-review.md
docs/comparison/: 01-architecture.md  02-performance.md  03-providers.md  04-api-compatibility.md  05-configuration.md  06-authentication.md  07-routing.md  08-storage.md  09-monitoring.md  10-testing.md
docs/plan/: 200-round-optimization-program.md  3-11-design-review.md  no-backward-compat-dedup-plan.md  redundancy-dedup-execution-plan.md  template.md
docs/refactor/2-26/: provider-migration-tracker.md  provider-optimization-plan.md
docs/refactor/3-20/: 00-provider-api-audit-summary.md  01-openai-audit.md  02-anthropic-audit.md  03-gemini-audit.md  04-openrouter-audit.md  05-mistral-audit.md  06-codebase-audit.md  07-issue-tracker.md
docs/todo/: optimization-execution.md
docs/todo/2-15/: codebase-analysis.md
docs/vibe/: architecture-guard-and-repair-plan.md
examples/: Cargo.toml  azure_ai_chat.rs  azure_ai_streaming.rs  groq_dispatch_test.rs  groq_example.rs  groq_streaming_test.rs  hello.rs  test_cloudflare.rs  test_thinking.rs  test_xai.rs
examples/providers/: README.md
plan/: 2026-02-08_12-09-23-refresh-all-provider-model-catalogs.md
scripts/: sync_models.py
scripts/guards/: check_api_runtime_boundary.sh  check_pr_overlap.sh  check_pr_scope.sh  check_schema_duplicates.sh  check_tautological_assertions.sh
src/: lib.rs
src/auth/: mod.rs  password.rs  system.rs  tests.rs  types.rs  user_management.rs
src/auth/api_key/: creation.rs  management.rs  tests.rs  types.rs
src/auth/jwt/: handler.rs  tests.rs  tokens.rs  types.rs  utils.rs
src/auth/oauth/: client.rs  config.rs  handlers.rs  middleware.rs  mod.rs  session.rs  tests.rs  types.rs
src/auth/rbac/: helpers.rs  permissions.rs  roles.rs  system.rs  tests.rs  types.rs
src/config/: mod.rs
src/config/builder/: config_builder.rs  mod.rs  presets.rs  provider_builder.rs  server_builder.rs  tests.rs
src/config/models/: auth.rs  budget.rs  cache.rs  defaults.rs  enterprise.rs  file_storage.rs  gateway.rs  gateway_tests.rs  mod.rs  monitoring.rs  pricing.rs  provider.rs  rate_limit.rs  router.rs  server.rs  storage.rs
src/config/validation/: auth_validators.rs  cache_validators.rs  config_validators.rs  enterprise_validators.rs  mod.rs  monitoring_validators.rs  router_validators.rs  ssrf.rs  storage_validators.rs  tests.rs
src/core/: mod.rs
src/core/a2a/: config.rs  error.rs  gateway.rs  message.rs  provider.rs  registry.rs
src/core/alerting/: channels.rs  config.rs  manager.rs  mod.rs  tests.rs  types.rs
src/core/analytics/: reports.rs  types.rs
src/core/audio/: mod.rs  speech.rs  transcription.rs  translation.rs  types.rs
src/core/audit/: config.rs  events.rs  logger.rs  middleware.rs  mod.rs  outputs.rs  tests.rs  types.rs
src/core/batch/: async_batch.rs  tests.rs
src/core/budget/: alerts.rs  manager.rs  middleware.rs  mod.rs  provider_limits.rs  tests.rs  tracker.rs  types.rs
src/core/cache/: dual.rs  key_generator.rs  llm_cache.rs  memory.rs  mod.rs  redis_cache.rs  types.rs
src/core/cache_manager/: manager.rs  mod.rs
src/core/completion/: conversion.rs  default_router.rs  helpers.rs  mod.rs  router_impl.rs  stream.rs  tests.rs  types.rs
src/core/cost/: calculator.rs  types.rs  utils.rs
src/core/embedding/: helpers.rs  mod.rs  options.rs  router.rs  tests.rs  types.rs
src/core/function_calling/: conversion.rs  types.rs
src/core/guardrails/: config.rs  engine.rs  middleware.rs  mod.rs  openai_moderation.rs  pii.rs  prompt_injection.rs  tests.rs  traits.rs  types.rs
src/core/health/: checker.rs  monitor.rs  provider.rs  routing.rs  tests.rs  types.rs
src/core/integrations/: manager.rs  mod.rs
src/core/ip_access/: config.rs  control.rs  middleware.rs  mod.rs  tests.rs  types.rs
src/core/keys/: database_repository.rs  database_repository_tests.rs  db_mapping.rs  db_update.rs  manager.rs  mod.rs  repository.rs  tests.rs  types.rs
src/core/mcp/: config.rs  error.rs  gateway.rs  mod.rs  permissions.rs  protocol.rs  server.rs  tools.rs  transport.rs  validation.rs
src/core/models/: mod.rs  request.rs
src/core/observability/: histogram.rs  metrics.rs  mod.rs  redaction.rs  tests.rs  types.rs
src/core/providers/: base_provider.rs  capabilities.rs  context.rs  contextual_error.rs  factory.rs  macros.rs  mod.rs  provider_error_conversions.rs  provider_registry.rs  provider_type.rs  shared.rs  transform.rs  unified_provider.rs  unified_provider_tests.rs
src/core/rate_limiter/: limiter.rs  mod.rs  strategies.rs  tests.rs  types.rs  utils.rs
src/core/realtime/: config.rs  events.rs  mod.rs  session.rs
src/monitoring/: background.rs  mod.rs  system.rs  tests.rs  types.rs
src/sdk/: config.rs  errors.rs  mod.rs  providers.rs
src/server/: builder.rs  handlers.rs  http.rs  mod.rs  state.rs  tests.rs  types.rs  utils.rs
src/services/: mod.rs
src/storage/: mod.rs
src/utils/: mod.rs
tests/common/: database.rs  mod.rs
tests/e2e/: audio.rs  chat_completion.rs  deepseek.rs
tests/integration/: auth_middleware_tests.rs  completions_route_tests.rs  config_validation_tests.rs  database_tests.rs  error_handling_tests.rs  http_routes_tests.rs  mod.rs  provider_factory_tests.rs  provider_tests.rs  router_tests.rs
(+930 files in other folders)
